[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD/InGameScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/toppng.com-white-flag-2000x2153.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "MoveLabel"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Label_WeaponName:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -50, -0.25, 0, 0.25, 0, -80, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[node name="InGameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
script = ExtResource( 1 )

[node name="Score" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label_ScoreText" type="Label" parent="Score"]
margin_left = 78.0
margin_top = 60.0
margin_right = 118.0
margin_bottom = 74.0
text = "Score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_ScoreAmount" type="Label" parent="Score"]
margin_left = 118.433
margin_top = 60.0
margin_right = 158.433
margin_bottom = 74.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="Label_HealthText" type="Label" parent="Health"]
margin_left = -1770.0
margin_top = 60.0
margin_right = -1728.0
margin_bottom = 74.0
text = "Health"

[node name="Label_HealthAmount" type="Label" parent="Health"]
margin_left = -1724.0
margin_top = 60.0
margin_right = -1684.0
margin_bottom = 74.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponName" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animation_Label" type="AnimationPlayer" parent="WeaponName"]
anims/MoveLabel = SubResource( 1 )

[node name="Label_WeaponName" type="Label" parent="WeaponName"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = -50.0
margin_right = 80.0
margin_bottom = -35.0
text = "weapon_name"
align = 1

[node name="FlagTaken" type="Control" parent="."]
visible = false
margin_left = 304.0
margin_top = 77.0
margin_right = 344.0
margin_bottom = 117.0

[node name="Sprite" type="Sprite" parent="FlagTaken"]
position = Vector2( -40.894, -7.57822 )
scale = Vector2( 0.042608, 0.042608 )
texture = ExtResource( 2 )

[node name="FlagText" type="Control" parent="."]
visible = false
margin_left = 574.0
margin_top = 66.0
margin_right = 614.0
margin_bottom = 106.0

[node name="Label" type="Label" parent="FlagText"]
margin_left = -214.0
margin_top = -8.0
margin_right = 36.0
margin_bottom = 23.0
text = "Destroy enemies for the highest score 
then return to base! But don't get hit!"
